welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:12: error: value Blue is not a member of object java.awt.Color
def faireMotif(){avance();faireDiago(Color.Blue);faireDiago(Color.GREEN);faireDiago(Color.YELLOW);faireDiago(Color.RED)}
                                           ^